--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -8,6 +8,9 @@
     {{#ifpage 'rr-vol002'}}
       	<p><strong>May 1, 2017</strong> &mdash; I've opted to eliminate the categorization of the links this week, as over 20 links have made it into the email this week.</p>
     {{/ifpage}}
+    {{#ifpage 'rr-vol003'}}
+      	<p><strong>May 9, 2017</strong> &mdash; Here's a quick one from the road.</p>
+    {{/ifpage}}
     </columns>
   </row>
 </container>
