--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -11,6 +11,9 @@
     {{#ifpage 'rr-vol003'}}
       	<p><strong>May 9, 2017</strong> &mdash; Here's a quick one from the road.</p>
     {{/ifpage}}
+    {{#ifpage 'rr-vol004'}}
+      	<p><strong>June 21, 2017</strong> &mdash; It's been over a month since the last round-up due to the aggressive launch of Radicava. With such a break in between emails, some topics warrent their own issue. I present to you the Data Visualization Issue.</p>
+    {{/ifpage}}
     </columns>
   </row>
 </container>
