Resource Round-up Vol. 005

--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -14,6 +14,9 @@
     {{#ifpage 'rr-vol004'}}
       	<p><strong>June 21, 2017</strong> &mdash; It's been over a month since the last round-up due to the aggressive launch of Radicava. With such a break in between emails, some topics warrent their own issue. I present to you the Data Visualization Issue.</p>
     {{/ifpage}}
+    {{#ifpage 'rr-vol005'}}
+      	<p><strong>June 28, 2017</strong> &mdash; Happy Hump Day! Here are a few good reads to get you through the day. I'm planning on sending out an update issue before the end of the week with a link to view the archive of past round-ups.</p>
+    {{/ifpage}}
     </columns>
   </row>
 </container>
