added archive link to footer. converted index page to be archive listing. began stubbing out issue 6

--- a/src/layouts/index-layout.html
+++ b/src/layouts/index-layout.html
@@ -17,9 +17,10 @@
     <tr>
       <td class="center" align="center" valign="top">
         <center>
-
+			{{> _masthead}}
             {{> body}}
-
+			{{> _signoff}}
+			{{> _footer}}
         </center>
       </td>
     </tr>
