--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -1,22 +1,27 @@
 <container>
-  <row>
-    <columns large="12">
-		<h2>Hello *|FNAME|*,</h2>
-    {{#ifpage 'rr-vol001'}}
-      	<p><strong>April 24, 2017</strong> &mdash; Welcome to the first installment of the GSW Newtown Resource Round-up. This will be a collection of resources from around the web focusing on design and technology. Depending on the amount of currated content, this could be either something that gets sent out once a week or once a month.</p>
-    {{/ifpage}}
-    {{#ifpage 'rr-vol002'}}
-      	<p><strong>May 1, 2017</strong> &mdash; I've opted to eliminate the categorization of the links this week, as over 20 links have made it into the email this week.</p>
-    {{/ifpage}}
-    {{#ifpage 'rr-vol003'}}
-      	<p><strong>May 9, 2017</strong> &mdash; Here's a quick one from the road.</p>
-    {{/ifpage}}
-    {{#ifpage 'rr-vol004'}}
-      	<p><strong>June 21, 2017</strong> &mdash; It's been over a month since the last round-up due to the aggressive launch of Radicava. With such a break in between emails, some topics warrent their own issue. I present to you the Data Visualization Issue.</p>
-    {{/ifpage}}
-    {{#ifpage 'rr-vol005'}}
-      	<p><strong>June 28, 2017</strong> &mdash; Happy Hump Day! Here are a few good reads to get you through the day. I'm planning on sending out an update issue before the end of the week with a link to view the archive of past round-ups.</p>
-    {{/ifpage}}
-    </columns>
-  </row>
+	<row>
+		<columns large="12">
+			<h2>Hello *|FNAME|*,</h2>
+			{{#ifpage 'rr-vol001'}}
+				<p><strong>April 24, 2017</strong> &mdash; Welcome to the first installment of the GSW Newtown Resource Round-up. This will be a collection of resources from around the web focusing on design and technology. Depending on the amount of currated content, this could be either something that gets sent out once a week or once a month.</p>
+			{{/ifpage}}
+			{{#ifpage 'rr-vol002'}}
+				<p><strong>May 1, 2017</strong> &mdash; I've opted to eliminate the categorization of the links this week, as over 20 links have made it into the email this week.</p>
+			{{/ifpage}}
+			{{#ifpage 'rr-vol003'}}
+				<p><strong>May 9, 2017</strong> &mdash; Here's a quick one from the road.</p>
+			{{/ifpage}}
+			{{#ifpage 'rr-vol004'}}
+				<p><strong>June 21, 2017</strong> &mdash; It's been over a month since the last round-up due to the aggressive launch of Radicava. With such a break in between emails, some topics warrent their own issue. I present to you the Data Visualization Issue.</p>
+			{{/ifpage}}
+			{{#ifpage 'rr-vol005'}}
+				<p><strong>June 28, 2017</strong> &mdash; Happy Hump Day! Here are a few good reads to get you through the day. I'm planning on sending out an update issue before the end of the week with a link to view the archive of past round-ups.</p>
+			{{/ifpage}}
+			{{#ifpage 'rr-vol006'}}
+				<p><strong>August 10, 2017</strong> &mdash; Welcome back! After a small absence of newsletters, we are back in the swing of things. Hopefully, we'll be able to stay on a more regular schedule. Of course now that I've said that, we'll get overwhelmed with work again, and this will find its way on the backburner.</p>
+				<p>That being said, for those keeping track, we last left off with the anticipation of having an archive available for us to be able access past emails. For now, they can be found <a href="http://dev.gsw-w.com/gswntrr/archive.html">here</a>. At some point, we'll house them somewhere more appropreiate.</p>
+				<p>Now down to business. I've been involved in a few different conversations lately with developers and non-developers alike about different websites out there to learn various programming languages. I felt it fitting for this issue to share a collection of some of these resources.</p>
+			{{/ifpage}}
+		</columns>
+	</row>
 </container>
