updated archive(index) and subscribe links. added more to vol.006

--- a/src/partials/_footer.html
+++ b/src/partials/_footer.html
@@ -1,7 +1,7 @@
 <container class="footer">
   <row>
     <columns large="12">
-      <p class="text-center"><a href="http://dev.gsw-w.com/gswntrr/index.html">Subscribe</a> / <a href="*|UNSUB|*">Unsubscribe</a> / <a href="mailto:brandon.morse@inventivhealth.com?subject=GSWNT Resource Round-up">Contact</a> / <a href="http://dev.gsw-w.com/gswntrr/archive.html">Archive</a></p>
+      <p class="text-center"><a href="http://dev.gsw-w.com/gswntrr/subscribe.html">Subscribe</a> / <a href="*|UNSUB|*">Unsubscribe</a> / <a href="mailto:brandon.morse@inventivhealth.com?subject=GSWNT Resource Round-up">Contact</a> / <a href="http://dev.gsw-w.com/gswntrr/index.html">Archive</a></p>
 	  <p>Thank you for reading &mdash; you are receiving this email because you rock! You are either part of the development team at GSW Newtown, or signed up because you wanted to receive a weekly update with links to articles, tools and tricks of the trade. I hope you found this round-up useful. However, if you'd rather not receive future round-up emails, you can unsubscribe using the link above.</p>
     </columns>
   </row>
