updated intro for vol 006

--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -19,8 +19,8 @@
 			{{/ifpage}}
 			{{#ifpage 'rr-vol006'}}
 				<p><strong>August 10, 2017</strong> &mdash; Welcome back! After a small absence of newsletters, we are back in the swing of things. Hopefully, we'll be able to stay on a more regular schedule. Of course now that I've said that, we'll get overwhelmed with work again, and this will find its way on the backburner.</p>
-				<p>That being said, for those keeping track, we last left off with the anticipation of having an archive available for us to be able access past emails. For now, they can be found <a href="http://dev.gsw-w.com/gswntrr/archive.html">here</a>. At some point, we'll house them somewhere more appropreiate.</p>
-				<p>Now down to business. I've been involved in a few different conversations lately with developers and non-developers alike about different websites out there to learn various programming languages. I felt it fitting for this issue to share a collection of some of these resources.</p>
+				<p>That being said, for those keeping track, we last left off with the anticipation of having an archive available for us to be able access past emails. For now, they can be found <a href="http://dev.gsw-w.com/gswntrr/index.html">here</a>. At some point, we'll house them somewhere more appropriate.</p>
+				<p>Now down to business. I've been involved in a few different conversations lately with developers and non-developers alike about different websites out there to learn various programming languages. I felt it fitting for this issue to share a collection of some of these resources. I could provide a list of hundreds of sites, especially when it gets into specific topics, but I thought it best to just give a small handful of sites that cover multiple languages.</p>
 			{{/ifpage}}
 		</columns>
 	</row>
