updated signature. added vol007

--- a/src/partials/_intro.html
+++ b/src/partials/_intro.html
@@ -22,6 +22,9 @@
 				<p>That being said, for those keeping track, we last left off with the anticipation of having an archive available for us to be able access past emails. For now, they can be found <a href="http://dev.gsw-w.com/gswntrr/index.html">here</a>. At some point, we'll house them somewhere more appropriate.</p>
 				<p>Now down to business. I've been involved in a few different conversations lately with developers and non-developers alike about different websites out there to learn various programming languages. I felt it fitting for this issue to share a collection of some of these resources. I could provide a list of hundreds of sites, especially when it gets into specific topics, but I thought it best to just give a small handful of sites that cover multiple languages.</p>
 			{{/ifpage}}
+			{{#ifpage 'rr-vol007'}}
+				<p><strong>May 17, 2017</strong> &mdash; Almost a year later we are back! Just in time for&nbsp;<nobr>Global Accessibility Awareness Day.</nobr>&nbsp;In this issue, we are going to cover some nice resources focused around accessibility.</p>
+			{{/ifpage}}
 		</columns>
 	</row>
 </container>
