--- a/src/partials/_signoff.html
+++ b/src/partials/_signoff.html
@@ -3,10 +3,10 @@
     	<columns large="12">
 			<h3>tail -f /dev/roundup</h3>
 			<p>If you would like to contribute to the newsletter, please feel free to email directly any and all links.</p>
-			<p>Until next time..</p>
+			<p>Until next time...</p>
 			<p>Cheers,<br />
 				Brandon Morse<br />
-				Associate Technology Director, GSW Newtown
+				Lead Technology Architect, GSW Newtown
 			</p>
 		</columns>
   	</row>
