--- a/src/partials/_masthead.html
+++ b/src/partials/_masthead.html
@@ -1,10 +1,10 @@
 <container>
-	<spacer size="6" class="gold-line"></spacer>	
+	<spacer size="6" class="gold-line"></spacer>
   	<spacer size="16"></spacer>
   	<row>
     	<columns>
       		<center>
-        		<img src="http://dev.gsw-w.com/gswntrr/header.jpg" alt="GSW Newtown Weekly Resource Round-up">
+        		<img src="http://dev.gsw-w.com/gswntrr/header02.jpg" alt="GSW Newtown Resource Round-up">
       		</center>
     	</columns>
   	</row>
