--- a/src/partials/_signoff.html
+++ b/src/partials/_signoff.html
@@ -2,7 +2,7 @@
   	<row>
     	<columns large="12">
 			<h3>tail -f /dev/roundup</h3>
-			<p>If you would like to contribute to the newsletter, please feel free to email directly any and all links.</p>
+			<p>If you would like to contribute to the newsletter, please feel free to <a href="mailto:brandon.morse@syneoshealth.com?subject=GSWNT Resource Round-up">email directly</a> any and all links.</p>
 			<p>Until next time...</p>
 			<p>Cheers,<br />
 				Brandon Morse<br />
